@@ -2,11 +2,19 @@
 
 	patch by: Chris Wang <chris.wang@sun.com>
 
+	* demos/gtk-demo/Makefile.am: install resource files for gtkmm demo program
+	(also change the name from 'demo' to 'gtkmm-demo').  Fixes Bug #516602
+
+2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	patch by: Chris Wang <chris.wang@sun.com>
+
 	* demos/gtk-demo/demowindow.cc:
 	* demos/gtk-demo/example_images.cc:
 	* demos/gtk-demo/example_pixbufs.cc:
 	* demos/gtk-demo/example_textview.cc: fix gtkmm demo program to be able to
-	find the source and image files when not run from the source directory
+	find the source and image files when not run from the source directory.
+	Fixes bug #516600
 
 2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>
 
